--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "<img src='images/goodhart.jpg' height=50% width=50%>\n",
     "\n",
-    "Image from: [Sketchlantations](https://www.sketchplanations.com/post/167369765942/goodharts-law-when-a-measure-becomes-a-target)\n",
+    "Image from: [Sketchplantations](https://www.sketchplanations.com/post/167369765942/goodharts-law-when-a-measure-becomes-a-target)\n",
     "\n",
     "## Example 1: Cobra Skins\n",
     "\n",
