--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "* Define Goodhart's law and it's relationship to hypothesis testing \n",
+    "* Define Goodhart's law and its relationship to hypothesis testing \n",
     "* Identify real-world examples of Goodhart's law in action \n",
     "\n",
     "## What is Goodhart's law?\n",
@@ -101,6 +101,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
