Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -31,13 +31,13 @@
     "\n",
     "Goodhart's law succinctly explains a cardinal sin that many data scientists, project managers, and CEOs make all the time without realizing it -- they make policy or set goals based on statistical metrics without considering the unintended consequences and effects these policies might have!  \n",
     "\n",
-    "<img src=\"images/goodhart.jpg\" width=\"500\">\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/goodhart.jpg\" width=\"500\">\n",
     "\n",
     "Image from: [Sketchplantations](https://www.sketchplanations.com/post/167369765942/goodharts-law-when-a-measure-becomes-a-target)\n",
     "\n",
     "## Example 1: Cobra skins\n",
     "\n",
-    "<img src=\"images/new_cobra.png\" width=\"300\">\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/new_cobra.png\" width=\"300\">\n",
     "\n",
     "The [Cobra effect](https://en.wikipedia.org/wiki/Cobra_effect) refers to an anecdote that demonstrates an example of Goodhart's law in effect during the time of British rule of colonial India.  As the story goes, a high-ranking officer in the British military was concerned about the number of highly venomous cobras that could be found in Delhi. He had the bright idea of offering a bounty for every cobra skin brought to him! Initially, this seemed to work -- people hunted cobras, sold the skins to the British government for their bounty, and the cobra population dipped slightly in the city. However, this soon backfired spectacularly, when citizens started breeding cobras! As a result, the cobra population stopped declining and even repopulated a bit. After a while, the officer caught onto the breeding, as he realized they were paying out many bounties but the cobra problem in the city was still prevalent as ever. After realizing this, he canceled the bounty. Ironically, this meant that all the cobra breeders now had no reason to keep the cobras they were breeding, so they dumped them in the street -- causing the city to have even more cobras than before the bounty program had been implemented in the first place!\n",
     "\n",
@@ -53,7 +53,7 @@
     "\n",
     "## Example 2: Standardized testing in US schools\n",
     "\n",
-    "<img src=\"images/new_test.png\" width=\"400\">\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/new_test.png\" width=\"400\">\n",
     "\n",
     "A more depressing real-world example of Goodhart's law in action is the prevalence of standardized testing in the American public school system. These tests were originally designed as a way to measure both individual student performance and overall teacher and school effectiveness.  However, school funding is tied directly to test scores.  This incentivizes schools to \"teach to the test\", spending a disproportionate amount of class time each year focusing on test preparation. By having incentives for schools to focus heavily on preparing students for these tests, the system has created ripple effects including reorientating student's focus on preparing for tests rather than other learning goals that might be more characteristic of real-world applications such as project orientated tasks. In this case, policymakers started out with a harmless, positive intention -- measure student and school performance -- but failing to account for Goodhart's law and offering strong incentives in relation to these metrics has degraded the usefulness of these test scores by altering behaviors.\n",
     "\n",
